Fix dev-setup command in justfile
- Fixed syntax error where dev-setup was calling 'install pre-commit-install' as one command
- Now properly calls 'just install' and 'just pre-commit-install' separately
- Development environment setup now works correctly during project creation

--- a/{{cookiecutter.project_slug}}/justfile
+++ b/{{cookiecutter.project_slug}}/justfile
@@ -27,7 +27,8 @@ clean:
     find . -type f -name "*.pyc" -delete
 
 dev-setup:
-        install pre-commit-install
+    just install
+    just pre-commit-install
     @echo "🎉 Development environment setup complete!"
     @echo "Run 'just test' to run tests"
     @echo "Run 'just docs-serve' to serve documentation"
