add pandas to deps

--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -21,8 +21,7 @@ dependencies = [
     "requests",
     "python-dotenv",
     "tqdm",
-    "typer",
-    "rich",
+    "pandas",
 ]
 
 [project.optional-dependencies]
